# particle_simulation

./: Cargo.toml  README.md  bench_results.md
benches/: sim_bench.rs
src/: area.rs  cell.rs  color.rs  frame.rs  lib.rs  main.rs  neighborhood.rs  offset.rs  particle.rs  simulation.rs  sprite.rs  test.rs  utility.rs
src/particles/: constants.rs  mod.rs  neighborhood.rs  p_fly.rs  p_mud.rs  p_oil.rs  p_rock.rs  p_sand.rs  p_smoke.rs  p_spark.rs  p_static.rs  p_vapor.rs  p_water.rs  p_wood.rs  particle.rs  properties.rs  sand.rs
src/particles/properties/: burnability.rs  check_result.rs  mod.rs  pressure.rs
tests/: offset.rs  sprite.rs  utility.rs
