[package]
name = "particle_simulation"
version = "0.1.0"
edition = "2021"

[dependencies]
dyn-clone = "1.0.17"
eframe = "0.29.1"
fastrand = "2.1.1"
image = "0.25.4"
rand = "0.8.5"
rayon = "1.10.0"
rustc-hash = "2.0.0"

[dev-dependencies]
criterion = { version = "0.4", features = ["html_reports"] }

[[bench]]
name = "sim_bench"
harness = false
